@@ -1,3 +1,5 @@
+-column widths are not saved
+
 -merge translations
 -add ` key to website
 -website font size under windows
@@ -108,6 +110,8 @@ http://stackoverflow.com/questions/2545577/qsplitter-becoming-undistinguishable-
 -make doc: errors related to _
 
 -card templates?
+
+-when exporting, progress bar when creating latex?
 
 -add up and down arrows on browsing through the preview window?
 
